fixed highlight-image overlap issue

--- a/styles.css
+++ b/styles.css
@@ -206,7 +206,6 @@ header {
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 
 .header__description {
@@ -228,6 +227,7 @@ header {
   height: 100%;
   max-height: 50vh;
   padding: 20px;
+  margin-top: 16px;
 }
 
 .container {
@@ -267,7 +267,7 @@ HIGHLIGHTS
   position: absolute;
   width: 101vw;
   height: 12vw;
-  z-index: 1;
+  z-index: 50;
   background-size: cover;
   background-repeat: no-repeat;
   left: 0;
